--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,10 @@
 	<name>Angular-and-Spring-FullStack</name>
 	<description>Demo project for Spring Boot</description>
 
+	<id>deploy-docker</id>
 	<properties>
 		<java.version>1.8</java.version>
+		<maven.deploy.skip>true</maven.deploy.skip>
 	</properties>
 
 	<dependencies>
@@ -74,7 +76,47 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>2.2.0</version>
+				<configuration>
+					<to>
+						<image>${navmich}/baeldung-ci-cd-process</image>
+						<tags>
+							<tag>${project.version}</tag>
+							<tag>latest</tag>
+						</tags>
+					</to>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
 </project>
+
+<!--<profile>-->
+<!--<id>deploy-docker</id>-->
+<!--<properties>-->
+<!--	<maven.deploy.skip>true</maven.deploy.skip>-->
+<!--</properties>-->
+<!--<build>-->
+<!--	<plugins>-->
+<!--		<plugin>-->
+<!--			<groupId>com.google.cloud.tools</groupId>-->
+<!--			<artifactId>jib-maven-plugin</artifactId>-->
+<!--			<version>2.2.0</version>-->
+<!--			<configuration>-->
+<!--				<to>-->
+<!--					<image>${navmich}/baeldung-ci-cd-process</image>-->
+<!--					<tags>-->
+<!--						<tag>${project.version}</tag>-->
+<!--						<tag>latest</tag>-->
+<!--					</tags>-->
+<!--				</to>-->
+<!--			</configuration>-->
+<!--		</plugin>-->
+<!--	</plugins>-->
+<!--</build>-->
+<!--</profile>-->
