--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>Angular-and-Spring-FullStack</name>
 	<description>Demo project for Spring Boot</description>
 
-	<id>deploy-docker</id>
+<!--	<id>deploy-docker</id>-->
 	<properties>
 		<java.version>1.8</java.version>
 		<maven.deploy.skip>true</maven.deploy.skip>
