Docker setup in .travis.yml - pokus 6

--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,8 @@
 				<version>2.2.0</version>
 				<configuration>
 					<to>
-						<image>${navmich}/baeldung-ci-cd-process</image>
+<!--						<image>${navmich}/baeldung-ci-cd-process</image>-->
+						<image>navmich/baeldung-ci-cd-process</image>
 						<tags>
 							<tag>${project.version}</tag>
 							<tag>latest</tag>
