--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: java
 jdk:
   - openjdk11
 before_install:
-  - sudo chmod +x mvnw
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker pull openjdk:11-jre-slim-sid
+#  - sudo chmod +x mvnw
+#  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+#  - docker pull openjdk:11-jre-slim-sid
 script:
   - ./mvnw clean install
-  - ./mvnw deploy jib:build -P deploy-docker
+#  - ./mvnw deploy jib:build -P deploy-docker
