implementace POSTGRESQL databaze

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-logging.level.org.springframework=debug
-
-#spring.security.user.name=Mike
-#spring.security.user.password=p
+#logging.level.org.springframework=debug
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
 
 jwt.signing.key.secret=mySecret
 jwt.get.token.uri=/authenticate
@@ -9,10 +8,25 @@ jwt.refresh.token.uri=/refresh
 jwt.http.request.header=Authorization
 jwt.token.expiration.in.seconds=604800
 
+# UKAZE SQL V LOGU
 spring.jpa.show-sql=true
-spring.h2.console.enabled=true
 
-spring.datasource.url=jdbc:h2:mem:testdb
 spring.data.jpa.repositories.bootstrap-mode=default
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/backend-springboot-db
+spring.datasource.username=postgres
+spring.datasource.password=Sinn4589
+
+# NEVER => nebude pouzito schema (data.sql), tj 'dummy' database
+    # opak je ALWAYS
+spring.datasource.initialization-mode=never
+
+# NACTE UDAJE PRO TABULKY Z ENTIT (pokud neni NONE)
+spring.jpa.hibernate.ddl-auto=none
+    # FOR PRODUCTION MODE = overi, ze tabulka ma stejne sloupce jako entita
+    #spring.jpa.hibernate.ddl-auto=validate
+
+# abychom predesli nejakym SQL exception
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 server.port=${PORT:8080}
