BEFORE MAVEN INSTALL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,15 @@ spring.jpa.show-sql=true
 
 spring.data.jpa.repositories.bootstrap-mode=default
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/backend-springboot-db
-spring.datasource.username=postgres
-spring.datasource.password=Sinn4589
+# FOR LOCAL USAGE - PASSWORD EXPOSED
+#spring.datasource.url=jdbc:postgresql://localhost:5432/backend-springboot-db
+#spring.datasource.username=postgres
+#spring.datasource.password=Sinn4589
+
+# FOR PRODUCTION USAGE - WE WILL CONFIGURE VARIABLES LATER
+spring.datasource.url=${jdbcurl}
+spring.datasource.username=${dbuser}
+spring.datasource.password=${dbpass}
 
 # NEVER => nebude pouzito schema (data.sql), tj 'dummy' database
     # opak je ALWAYS
@@ -29,4 +35,5 @@ spring.jpa.hibernate.ddl-auto=none
 # abychom predesli nejakym SQL exception
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-server.port=${PORT:8080}
+# DRIVEJSI KONFIGURACE PORTU PRO HEROKU
+#server.port=${PORT:8080}
