application.properties na LOCAL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,14 +14,14 @@ spring.jpa.show-sql=true
 spring.data.jpa.repositories.bootstrap-mode=default
 
 # FOR LOCAL USAGE - PASSWORD EXPOSED
-#spring.datasource.url=jdbc:postgresql://localhost:5432/backend-springboot-db
-#spring.datasource.username=postgres
-#spring.datasource.password=Sinn4589
+spring.datasource.url=jdbc:postgresql://localhost:5432/backend-springboot-db
+spring.datasource.username=postgres
+spring.datasource.password=Sinn4589
 
 # FOR PRODUCTION USAGE - WE WILL CONFIGURE VARIABLES LATER
-spring.datasource.url=${jdbcurl}
-spring.datasource.username=${dbuser}
-spring.datasource.password=${dbpass}
+#spring.datasource.url=${jdbcurl}
+#spring.datasource.username=${dbuser}
+#spring.datasource.password=${dbpass}
 
 # NEVER => nebude pouzito schema (data.sql), tj 'dummy' database
     # opak je ALWAYS
